--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,22 @@ MAX_LIMIT_ORDERS=20
 RPC_URL=https://base-mainnet.g.alchemy.com/v2/YOUR_ALCHEMY_KEY
 PRIVATE_KEY=your_main_wallet_private_key
 TOKEN_ADDRESS=0x_target_token_address_here
+
+# =====================================================
+# NEW: BASEV3SWAPPER CONTRACT CONFIGURATION
+# =====================================================
+# BaseV3Swapper contract address (deployed on Base mainnet)
+# Replace with actual deployed contract address
+BASE_V3_SWAPPER_ADDRESS=0x4b7cA3F2BFA2c4E9f000000000000000000000000
+
+# =====================================================
+# TREASURY WALLET CONFIGURATION (IMPORTANT!)
+# =====================================================
+# Your treasury wallet address where fees will be collected
+# IMPORTANT: Update this to your actual wallet address!
+TREASURY_WALLET=0x8825268025Bf3680789c25Fc5a2453668757dc54
+
+# Fee collection settings
+FEE_COLLECTION_ENABLED=true
+AUTO_FEE_TRANSFER=true
+MIN_FEE_TRANSFER=0.001
