--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "dependencies": {
         "@solana/spl-token": "^0.3.8",
         "@solana/web3.js": "^1.87.0",
+        "@uniswap/sdk-core": "^7.7.2",
+        "@uniswap/universal-router-sdk": "^4.19.7",
+        "@uniswap/v3-sdk": "^3.25.2",
         "axios": "^1.10.0",
         "bip39": "^3.1.0",
         "dotenv": "^16.5.0",
